Fixed spacing + added text notices

--- a/branch.css
+++ b/branch.css
@@ -21,13 +21,13 @@
     }
 }
 
-.btn-container:first-child {
-    margin-bottom: 0.5rem;
+#mint-btn {
+    margin-bottom: 0.25rem;
 }
 
 @media only screen and (max-width: 680px) {
-    .btn-container:first-child {
-        margin-right: 0.5rem;
+    #mint-btn {
+        margin-right: 0.25rem;
         margin-bottom: 0;
     }
 }
@@ -50,14 +50,13 @@
     }
 }
 
-/* #manifesto {
-    
-    border-radius: 4px; 
-} */
+#manifesto:hover {
+    border: 1px solid #9F9F9F;
+}
 
 #manifesto:focus {
-    border: 1px solid #b6b6b6;
-    outline: 1px solid #b6b6b6;
+    border: 1px solid #767676;
+    outline: 3px solid rgba(0, 0, 0, 0.1);
 }
 
 #manifesto {
